tests/spec/format/snapshots/enum_default_variant_moves_to_its_own_line.snap
---
source: tests/spec/format/mod.rs
description: "enum Colour { #[default] Red, Green }"
---
enum Colour {
  #[default]
  Red,
  Green,
}
