tests/spec/format/snapshots/enum_simple.snap
---
source: tests/spec/format/mod.rs
description: "enum Status { Pending, Complete }"
---
enum Status {
  Pending,
  Complete,
}
