tests/spec/format/snapshots/enum_variant_attribute_moves_to_its_own_line.snap
---
source: tests/spec/format/mod.rs
description: "enum Colour { #[json(\"x\")] Red, Green }"
---
enum Colour {
  #[json("x")]
  Red,
  Green,
}
