tests/spec/format/snapshots/enum_with_data.snap
---
source: tests/spec/format/mod.rs
description: "enum Option<T> { Some(T), None }"
---
enum Option<T> {
  Some(T),
  None,
}
