tests/spec/format/snapshots/file_comment_before_item_without_imports.snap
---
source: tests/spec/format/mod.rs
description: |-
  //! Header.
  fn main() {
    let _ = 1
  }
---
//! Header.

fn main() {
  let _ = 1
}
