tests/spec/format/snapshots/file_comment_followed_by_regular_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  //! Header.
  
  // section note
  fn main() {
    let _ = 1
  }
---
//! Header.

// section note
fn main() {
  let _ = 1
}
