tests/spec/format/snapshots/file_comment_with_bare_line.snap
---
source: tests/spec/format/mod.rs
description: |-
  //! Copyright 2026 Acme Corp.
  //!
  //! Second paragraph.
  
  fn main() {
    let _ = 1
  }
---
//! Copyright 2026 Acme Corp.
//!
//! Second paragraph.

fn main() {
  let _ = 1
}
