tests/spec/format/snapshots/for_loop.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { for item in items { process(item) } }"
---
fn test() {
  for item in items {
    process(item)
  }
}
