tests/spec/format/snapshots/format_fstring_block_interpolation_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let b = f\"v { { let a = 1; a } }\" }"
---
fn test() {
  let b = f"v { { let a = 1; a }}"
}
