tests/spec/format/snapshots/format_fstring_empty_block_interpolation_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let e = f\"v { {} }\" }"
---
fn test() {
  let e = f"v { {}}"
}
