tests/spec/format/snapshots/format_fstring_interpolation_many_args_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { let msg = f\"result {compute(first_argument, second_argument, third_argument, fourth_argument)}\" }"
---
fn test() {
  let msg = f"result {compute(first_argument, second_argument, third_argument, fourth_argument)}"
}
